# masterthesis_data_generation

./: .gitignore  README.md  pyproject.toml  specification_desired_clips.md
docker/: Dockerfile.gpu
experiments/: __init__.py
experiments/config/: physics_config.yaml
experiments/scripts/: __init__.py  blender_patched.py  encode_benchmark_vjepa2.py  generate_single_clip.py  manager_benchmark.py  move_selected_data.py  run_docker.sh  test_textured_floor.py  utils.py
experiments/scripts/helper_scripts/: print_npy.py  test_extreme_physics.py
generate_grid_image/: generate_black_grid_png.py
protocols/: 2026-01-06_kubric_pipeline_implementation.md  2026-01-06_physics_timing_and_arena_fixes.md  2026-01-08_memory_cpu_gpu_efficiency_improvements.md
util_scripts/: patch_kubric_blender4.py
